Modify index.html and add style2.css

--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
 		</ul>
 	</div>
 <h1>Apa yang akan menjadi apa yang akan menjadi </h1>
+<h1>Apa yang akan menjadi apa yang akan menjadi </h1>
+<h1>Apa yang akan menjadi apa yang akan menjadi </h1>
 </body>
 </html>
