--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 		</ul>
 	</div>
 <h1>Apa yang akan menjadi apa yang akan menjadi </h1>
-
+<p>
+	Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, nulla sit ad inventore corporis excepturi saepe necessitatibus! Laborum dolor deleniti similique veniam natus, consequuntur quibusdam quidem dolores adipisci, voluptatem nobis.
+</p>
+<p>
+	Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus voluptatum illum, amet sunt est, ipsam molestias assumenda quaerat aliquid asperiores molestiae hic odit expedita neque libero. Repudiandae voluptatem nobis tempore.
+</p>
 </body>
 </html>
